--- a/08_Bootstrap/Personal/index.html
+++ b/08_Bootstrap/Personal/index.html
@@ -5,28 +5,57 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="app.css">
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+        crossorigin="anonymous"></script>
     <title>Document</title>
 </head>
-->
+
 
 <body>
-    <h1>placehold</h1>
-    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Excepturi, aspernatur facere. Voluptatum laboriosam
-        cumque ad reiciendis quod placeat inventore libero, fugiat sint impedit incidunt nostrum id modi molestiae ullam
-        officia.
-        Possimus culpa soluta tenetur! Ipsa commodi et, officia iure modi nisi? Nostrum, mollitia! Sequi nesciunt
-        reiciendis excepturi temporibus qui, suscipit nam distinctio, in eum blanditiis hic odit doloribus saepe libero!
-        Tenetur possimus vero eos odio quae dignissimos, provident illum ipsum vitae voluptatibus unde. Hic veniam
-        perferendis aspernatur ipsa totam saepe eius possimus repellendus non, laborum quasi enim odit qui numquam?
-        Officia culpa repudiandae facere, repellat, exercitationem cupiditate ipsa nam delectus itaque et alias libero
-        ut, repellendus ipsam nostrum eaque quae adipisci. Deserunt eligendi quod optio delectus, quos suscipit
-        provident distinctio?
-        Illo impedit tempora dolores totam facere nobis non deleniti blanditiis quibusdam, deserunt numquam sit
-        voluptatibus beatae eveniet aut maiores, debitis error consectetur fuga nulla eius ad dicta. Atque, sequi vitae!
-    </p>
+    <div class="container">
+        <h1 class="display-1">Bootstrap playground</h1>
+        <h2 class="display-4">Buttons <span class="badge badge-success">New</span></h2>
+        <h2 class="display-5">Lead</h2>
+        <button type="button" class="btn btn-primary">Primary</button>
+        <button type="button" class="btn btn-success">Secondary</button>
+        <button type="button" class="btn btn-outline-info">Info</button>
+        <button type="button" class="btn btn-outline-info btn-lg">Info</button>
+        <button class="btn btn-primary">Updates <span class="badge badge-light">9</span></button>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Excepturi, aspernatur facere. Voluptatum laboriosam
+            cumque ad reiciendis quod placeat inventore libero, fugiat sint impedit incidunt nostrum id modi molestiae
+            ullam
+            officia.
+            Possimus culpa soluta tenetur! Ipsa commodi et, officia iure modi nisi? Nostrum, mollitia! Sequi nesciunt
+            reiciendis excepturi temporibus qui, suscipit nam distinctio, in eum blanditiis hic odit doloribus saepe
+            libero!
+            Tenetur possimus vero eos odio quae dignissimos, provident illum ipsum vitae voluptatibus unde. Hic veniam
+            perferendis aspernatur ipsa totam saepe eius possimus repellendus non, laborum quasi enim odit qui numquam?
+            Officia culpa repudiandae facere, repellat, exercitationem cupiditate ipsa nam delectus itaque et alias
+            libero
+            ut, repellendus ipsam nostrum eaque quae adipisci. Deserunt eligendi quod optio delectus, quos suscipit
+            provident distinctio?
+            Illo impedit tempora dolores totam facere nobis non deleniti blanditiis quibusdam, deserunt numquam sit
+            voluptatibus beatae eveniet aut maiores, debitis error consectetur fuga nulla eius ad dicta. Atque, sequi
+            vitae!
+        </p>
+        <h3>ALERTS</h3>
+        <div class="alert alert-danger alert-dismissible fade show" role="alert">DEATH APPROACHES
+            <button aria-label="Close" class="close" data-dismiss="alert">
+                <span aria-hidden="true">&times</span>
+            </button>
+        </div>
+        <blockquote class="blockquote text-center bg-danger">To be or not to be</blockquote>
+    </div>
 </body>
 
 </html>
